--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.milesseventh.seabattle"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.7" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -13,11 +13,12 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/GdxTheme" >
+        android:theme="@style/GdxTheme"
+        android:screenOrientation="landscape">
         <activity
             android:name="com.milesseventh.seabattle.GameActivity"
-            android:label="@string/app_name" 
-            android:screenOrientation="landscape" android:launchMode="singleTop">
+            android:label="@string/app_name"  
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
